--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ python:
   "3.6"
 install:
   - pip install -r requirements.txt
+  - pip install coveralls
 script:
   - pytest
+  - coverage run --source=app.api.v1.views -m pytest && coverage report
 after_success:
   -coveralls
