--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: python
 python:
-  "3.6"
+  - "3.6"
+services:
+  - postgresql
 install:
   - pip install -r requirements.txt
   - pip install coveralls
 script:
-  - pytest 
+  - pytest
+  - coverage run --source=app.api.v1.views -m pytest && coverage report
 after_success:
-  -coveralls
+  - coveralls
