--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
 more-itertools==4.3.0
+nose==1.3.7
 pep8==1.7.1
 pluggy==0.8.0
 py==1.7.0
